[package]
name = "git-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grrs"
path = "examples/grrs.rs"

[[bin]]
name = "tit"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
indicatif = "0.16"
clap-verbosity-flag = "0.3"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
